@@ -10,6 +10,7 @@ http://www.mediawiki.org/wiki/Extension:Semantic_Maps/Version_history#Semantic_M
 === Semantic Maps 1.0.5 ===
 (201x-xx-xx)
 
+* Allow properties of type string to be used as title. (bug 32632)
 
 === Semantic Maps 1.0.4 ===
 (2011-10-15)
